[package]
name = "fsm-macro"
version = "0.1.0"
edition = "2021"
author = "OZoneGuy"
description = "A statically checked finite state machine written in rust."

keywords = ["fsm", "finite-state-machine"]
license-file = "LICENSE"
repository = "https://github.com/OZoneGuy/rust-fsm"
readme = "README.md"

autotests = false
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/testing.rs"

[dependencies]
anyhow = "1.0.70"
quote = "1.0.26"
syn = "2.0.15"
trybuild = "1.0.80"