[package]
name = "fsm-macro"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/testing.rs"

[dependencies]
anyhow = "1.0.70"
quote = "1.0.26"
syn = "2.0.15"
trybuild = "1.0.80"